<resources>
    <string name="app_name">BigShowsEntertainment</string>
    <string name="facebook_app_id">279845305700784</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">dummy_user_name</string>
    <string name="user_email">dummy_user_email</string>
    <string name="nav_discover_shows">DISCOVER SHOWS</string>
    <string name="nav_movies">MOVIES</string>
    <string name="nav_tv_shows">TVSHOWS</string>
    <string name="nav_people">PEOPLE</string>
    <string name="nav_settings">SETTINGS</string>
    <string name="nav_about">ABOUT</string>
    <string name="googleloginText">Sign In</string>
    <string name="login_header_text">Sign in or Create an Account</string>
    <string name="fbloginText">Facebook Login</string>
    <string name="disclaimer_text">We promise we won\'t post anything to our wall unless you ask us to.</string>
    <string name="search_menu_string">Search movies,tvshows,popular people etc ....</string>
    <string name="big_show_user_login_user_email_hint">User Email</string>
    <string name="big_show_user_login_user_password_hint">User Password</string>
    <string name="Sign_In_Button">Sign In IMDB</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Login</string>
</resources>