<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/side_nav_bar"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <LinearLayout
            android:id="@+id/nav_profile_view"
            android:clickable="true"
            android:background="@drawable/ripple_effect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/nav_header_vertical_spacing">

            <!-- circular image view -->
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/nav_user_profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/activity_vertical_margin"
                android:src="@android:drawable/btn_star"
                app:civ_border_color="#FF000000"
                app:civ_border_width="4dp" />

            <TextView
                android:id="@+id/nav_user_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/user_name"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:id="@+id/nav_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/nav_header_vertical_spacing"
                android:paddingTop="@dimen/nav_header_vertical_spacing_textview"
                android:text="@string/user_email"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        </LinearLayout>


        <!-- line separator-->
        <View style="@style/line_separator" />

        <!-- Menu Item -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/nav_header_vertical_spacing">

            <TextView
                android:clickable="true"
                android:background="@drawable/ripple_effect"
                android:id="@+id/nav_discover_shows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_gallery"
                android:drawablePadding="@dimen/nav_header_vertical_spacing"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_discover_shows"
                android:textStyle="italic" />

            <!-- line separator-->
            <View style="@style/nav_menu_line_separator" />

            <TextView
                android:clickable="true"
                android:background="@drawable/ripple_effect"
                android:id="@+id/nav_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_camera"
                android:drawablePadding="@dimen/nav_header_vertical_spacing"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_movies"
                android:textStyle="italic" />

            <!-- line separator-->
            <View style="@style/nav_menu_line_separator" />

            <TextView
                android:clickable="true"
                android:background="@drawable/ripple_effect"
                android:id="@+id/nav_tv_shows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_manage"
                android:drawablePadding="@dimen/nav_header_vertical_spacing"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_tv_shows"
                android:textStyle="italic" />

            <!-- line separator-->
            <View style="@style/nav_menu_line_separator" />

            <TextView
                android:clickable="true"
                android:background="@drawable/ripple_effect"
                android:id="@+id/nav_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_send"
                android:drawablePadding="@dimen/nav_header_vertical_spacing"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_people"
                android:textStyle="italic" />

            <!-- line separator-->
            <View style="@style/nav_menu_line_separator" />

            <TextView
                android:clickable="true"
                android:background="@drawable/ripple_effect"
                android:id="@+id/nav_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_share"
                android:drawablePadding="@dimen/nav_header_vertical_spacing"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_settings"
                android:textStyle="italic" />

            <!-- line separator-->
            <View style="@style/nav_menu_line_separator" />

            <TextView
                android:clickable="true"
                android:background="@drawable/ripple_effect"
                android:id="@+id/nav_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_menu_slideshow"
                android:drawablePadding="@dimen/nav_header_vertical_spacing"
                android:padding="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_about"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>